testdata/baselines/reference/submodule/conformance/exportPropertyAssignmentNameResolution.errors.txt
bug24492.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== bug24492.js (1 errors) ====
    module.exports.D = class { }
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    new D()
    